--- a/abd_installer/files/abd_tool/displayer/index.html
+++ b/abd_installer/files/abd_tool/displayer/index.html
@@ -76,6 +76,7 @@
 <script src="jquery/js/jquery-3.5.1.min.js"></script>
 <script src="bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
 <script src="d3_lib/d3.js"></script>
+<script src="custom/js/wrnerr.js"></script>
 <script src="custom/js/objects.js"></script>
 <script src="custom/js/events.js"></script>
 <script src="custom/js/code.js"></script>
